openshift/Deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: node-app
  name: node-app
  namespace: node-app
spec:
  replicas: 1
  selector:
    app: node-app
    deploymentconfig: node-app
  strategy:
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: node-app
        deploymentconfig: node-app
    spec:
      containers:
      - env:
        - name: DBURL
          valueFrom:
            configMapKeyRef:
              name: node-configmap
              key: DBURL
        - name: CLIENTID
          valueFrom:
            configMapKeyRef:
              name: node-configmap
              key: CLIENTID
        image: 172.30.1.1:5000/node-app/node-openshift:0.1
        imagePullPolicy: Always
        name: node-app
        ports:
        - containerPort: 8080
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - node-app
        from:
          kind: ImageStreamTag
          name: 'node-openshift:0.1'
          namespace: node-app
      type: ImageChange
