openshift/Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-app
  name: node-app
  namespace: node-app
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: node-app
    deploymentconfig: node-app
  sessionAffinity: None
  type: ClusterIP
