openshift/Route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: node-app
  name: node-app
  namespace: forecast
spec:
  port:
    targetPort: 8080-tcp
  tls:
    termination: passthrough
  to:
    kind: Service
    name: node-app
    weight: 100
  wildcardPolicy: None
